# LoLClientHelper

./: Cargo.toml  README.md  riot.txt
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: champion.json  map-assets.json
crates/client_api/: Cargo.toml
crates/client_api/src/: client.rs  error.rs  lib.rs
crates/client_api/src/model/: data.rs  drake.rs  event.rs  mod.rs  player.rs  runes.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: league_app.rs  main.rs  match_history_ui.rs
crates/lcu_api/: Cargo.toml
crates/lcu_api/src/: lcu_client.rs  lib.rs
crates/lcu_api/src/model/: mod.rs  summoner.rs
crates/lcu_api/src/web_socket/: authorize_info.rs  error.rs  mod.rs  process_info.rs
crates/league_model/: Cargo.toml
crates/league_model/src/: error.rs  lib.rs
crates/league_model/src/common/: champion.rs  constants.rs  game.rs  mod.rs  partial_summoner.rs  runes.rs  summoner.rs
crates/league_model/src/live_client/: data.rs  event.rs  mod.rs  player.rs
src/: lib.rs  main.rs
