[package]
name = "lol_client_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
client_api = { path = "crates/client_api" }
tokio = { workspace = true }

[workspace]
members = [
    "crates/client_api",
]

[workspace.dependencies]
tokio = {version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "^1.0"
thiserror = "^1.0"
