[package]
name = "lol_client_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
client_api = { path = "crates/client_api" }
lcu_api = { path = "crates/lcu_api" }

tokio = { workspace = true }
# druid = { workspace = true }
anyhow = { workspace = true }
# irelia = { workspace = true }
# shaco = "0.6.0"

[workspace]
members = [
    "crates/client_api",
    "crates/lcu_api"
]

[workspace.dependencies]
tokio = {version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "^1.0"
thiserror = "^1.0"
druid = "0.8.3"
sysinfo = { version = "0.30.12" }
regex = { version = "1.5.4" }
# irelia = { version = "0.6.10" , features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

