[package]
name = "lol_client_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
client_api = { workspace = true }
lcu_api = { workspace = true }
league_model = { workspace = true }
gui ={ workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace]
members = [
    "crates/client_api",
    "crates/lcu_api",
    "crates/league_model",
    "crates/gui"
]

[workspace.dependencies]
tokio = {version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0"
thiserror = "^1.0"
druid = "0.8.3"
sysinfo = { version = "0.30.12" }
regex = { version = "1.5.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
log = { version = "0.4.22"}
lazy_static = "1.5.0"


league_model = { path = "crates/league_model" }
client_api = { path = "crates/client_api" }
lcu_api = { path = "crates/lcu_api" }
gui = { path = "crates/gui" }