[package]
name = "client_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
league_model = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

lazy_static = "1.5.0"
