[package]
name = "gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
eframe = { version = "0.28.1" }
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
winapi = {version = "0.3", features = ["wincon", "winuser"]}

league_model ={ workspace = true }
lcu_api = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3

[[bin]]
name = "LeagueClientHelper"
path = "src/main.rs"