[package]
name = "lcu_api"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
league_model = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }

base64 = { version = "0.22.1" }